fuse.h

	/** Function to add an entry in a readdir() operation
 *
 * @param buf the buffer passed to the readdir() operation
 * @param name the file name of the directory entry
 * @param stat file attributes, can be NULL
 * @param off offset of the next entry or zero
 * @return 1 if buffer is full, zero otherwise
 */
	typedef int (*fuse_fill_dir_t)(void *buf, const char *name,
								   const struct stat *stbuf, off_t off);
	/*
 * Stacking API
 */

	/**
 * Fuse filesystem object
 *
 * This is opaque object represents a filesystem layer
 */
	struct fuse_fs;
	/*
 * These functions call the relevant filesystem operation, and return
 * the result.
 *
 * If the operation is not defined, they return -ENOSYS, with the
 * exception of fuse_fs_open, fuse_fs_release, fuse_fs_opendir,
 * fuse_fs_releasedir and fuse_fs_statfs, which return 0.
 */

	int fuse_fs_getattr(struct fuse_fs *fs, const char *path, struct stat *buf);
	int fuse_fs_fgetattr(struct fuse_fs *fs, const char *path, struct stat *buf,
						 struct fuse_file_info *fi);
	int fuse_fs_rename(struct fuse_fs *fs, const char *oldpath,
					   const char *newpath);
	int fuse_fs_unlink(struct fuse_fs *fs, const char *path);
	int fuse_fs_rmdir(struct fuse_fs *fs, const char *path);
	int fuse_fs_symlink(struct fuse_fs *fs, const char *linkname,
						const char *path);
	int fuse_fs_link(struct fuse_fs *fs, const char *oldpath, const char *newpath);
	int fuse_fs_release(struct fuse_fs *fs, const char *path,
						struct fuse_file_info *fi);
	int fuse_fs_open(struct fuse_fs *fs, const char *path,
					 struct fuse_file_info *fi);
	int fuse_fs_read(struct fuse_fs *fs, const char *path, char *buf, size_t size,
					 off_t off, struct fuse_file_info *fi);
	int fuse_fs_read_buf(struct fuse_fs *fs, const char *path,
						 struct fuse_bufvec **bufp, size_t size, off_t off,
						 struct fuse_file_info *fi);
	int fuse_fs_write(struct fuse_fs *fs, const char *path, const char *buf,
					  size_t size, off_t off, struct fuse_file_info *fi);
	int fuse_fs_write_buf(struct fuse_fs *fs, const char *path,
						  struct fuse_bufvec *buf, off_t off,
						  struct fuse_file_info *fi);
	int fuse_fs_fsync(struct fuse_fs *fs, const char *path, int datasync,
					  struct fuse_file_info *fi);
	int fuse_fs_flush(struct fuse_fs *fs, const char *path,
					  struct fuse_file_info *fi);
	int fuse_fs_statfs(struct fuse_fs *fs, const char *path, struct statvfs *buf);
	int fuse_fs_opendir(struct fuse_fs *fs, const char *path,
						struct fuse_file_info *fi);
	int fuse_fs_readdir(struct fuse_fs *fs, const char *path, void *buf,
						fuse_fill_dir_t filler, off_t off,
						struct fuse_file_info *fi);
	int fuse_fs_fsyncdir(struct fuse_fs *fs, const char *path, int datasync,
						 struct fuse_file_info *fi);
	int fuse_fs_releasedir(struct fuse_fs *fs, const char *path,
						   struct fuse_file_info *fi);
	int fuse_fs_create(struct fuse_fs *fs, const char *path, mode_t mode,
					   struct fuse_file_info *fi);
	int fuse_fs_lock(struct fuse_fs *fs, const char *path,
					 struct fuse_file_info *fi, int cmd, struct flock *lock);
	int fuse_fs_flock(struct fuse_fs *fs, const char *path,
					  struct fuse_file_info *fi, int op);
	int fuse_fs_chmod(struct fuse_fs *fs, const char *path, mode_t mode);
	int fuse_fs_chown(struct fuse_fs *fs, const char *path, uid_t uid, gid_t gid);
	int fuse_fs_truncate(struct fuse_fs *fs, const char *path, off_t size);
	int fuse_fs_ftruncate(struct fuse_fs *fs, const char *path, off_t size,
						  struct fuse_file_info *fi);
	int fuse_fs_utimens(struct fuse_fs *fs, const char *path,
						const struct timespec tv[2]);
	int fuse_fs_access(struct fuse_fs *fs, const char *path, int mask);
	int fuse_fs_readlink(struct fuse_fs *fs, const char *path, char *buf,
						 size_t len);
	int fuse_fs_mknod(struct fuse_fs *fs, const char *path, mode_t mode,
					  dev_t rdev);
	int fuse_fs_mkdir(struct fuse_fs *fs, const char *path, mode_t mode);
#define fuse_file_info fuse_file_info_compat