generated_bindings.dart


  int fuse_fs_getattr(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<stat> buf,
  ) {
    return (_fuse_fs_getattr ??=
        _dylib.lookupFunction<_c_fuse_fs_getattr, _dart_fuse_fs_getattr>(
            'fuse_fs_getattr'))(
      fs,
      path,
      buf,
    );
  }

  _dart_fuse_fs_getattr? _fuse_fs_getattr;

  int fuse_fs_fgetattr(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<stat> buf,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_fgetattr ??=
        _dylib.lookupFunction<_c_fuse_fs_fgetattr, _dart_fuse_fs_fgetattr>(
            'fuse_fs_fgetattr'))(
      fs,
      path,
      buf,
      fi,
    );
  }

  _dart_fuse_fs_fgetattr? _fuse_fs_fgetattr;

  int fuse_fs_rename(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> oldpath,
    ffi.Pointer<ffi.Int8> newpath,
  ) {
    return (_fuse_fs_rename ??=
        _dylib.lookupFunction<_c_fuse_fs_rename, _dart_fuse_fs_rename>(
            'fuse_fs_rename'))(
      fs,
      oldpath,
      newpath,
    );
  }

  _dart_fuse_fs_rename? _fuse_fs_rename;

  int fuse_fs_unlink(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
  ) {
    return (_fuse_fs_unlink ??=
        _dylib.lookupFunction<_c_fuse_fs_unlink, _dart_fuse_fs_unlink>(
            'fuse_fs_unlink'))(
      fs,
      path,
    );
  }

  _dart_fuse_fs_unlink? _fuse_fs_unlink;

  int fuse_fs_rmdir(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
  ) {
    return (_fuse_fs_rmdir ??=
        _dylib.lookupFunction<_c_fuse_fs_rmdir, _dart_fuse_fs_rmdir>(
            'fuse_fs_rmdir'))(
      fs,
      path,
    );
  }

  _dart_fuse_fs_rmdir? _fuse_fs_rmdir;

  int fuse_fs_symlink(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> linkname,
    ffi.Pointer<ffi.Int8> path,
  ) {
    return (_fuse_fs_symlink ??=
        _dylib.lookupFunction<_c_fuse_fs_symlink, _dart_fuse_fs_symlink>(
            'fuse_fs_symlink'))(
      fs,
      linkname,
      path,
    );
  }

  _dart_fuse_fs_symlink? _fuse_fs_symlink;

  int fuse_fs_link(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> oldpath,
    ffi.Pointer<ffi.Int8> newpath,
  ) {
    return (_fuse_fs_link ??= _dylib
        .lookupFunction<_c_fuse_fs_link, _dart_fuse_fs_link>('fuse_fs_link'))(
      fs,
      oldpath,
      newpath,
    );
  }

  _dart_fuse_fs_link? _fuse_fs_link;

  int fuse_fs_release(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_release ??=
        _dylib.lookupFunction<_c_fuse_fs_release, _dart_fuse_fs_release>(
            'fuse_fs_release'))(
      fs,
      path,
      fi,
    );
  }

  _dart_fuse_fs_release? _fuse_fs_release;

  int fuse_fs_open(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_open ??= _dylib
        .lookupFunction<_c_fuse_fs_open, _dart_fuse_fs_open>('fuse_fs_open'))(
      fs,
      path,
      fi,
    );
  }

  _dart_fuse_fs_open? _fuse_fs_open;

  int fuse_fs_read(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Int8> buf,
    int size,
    int off,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_read ??= _dylib
        .lookupFunction<_c_fuse_fs_read, _dart_fuse_fs_read>('fuse_fs_read'))(
      fs,
      path,
      buf,
      size,
      off,
      fi,
    );
  }

  _dart_fuse_fs_read? _fuse_fs_read;

  int fuse_fs_read_buf(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Pointer<fuse_bufvec>> bufp,
    int size,
    int off,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_read_buf ??=
        _dylib.lookupFunction<_c_fuse_fs_read_buf, _dart_fuse_fs_read_buf>(
            'fuse_fs_read_buf'))(
      fs,
      path,
      bufp,
      size,
      off,
      fi,
    );
  }

  _dart_fuse_fs_read_buf? _fuse_fs_read_buf;

  int fuse_fs_write(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Int8> buf,
    int size,
    int off,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_write ??=
        _dylib.lookupFunction<_c_fuse_fs_write, _dart_fuse_fs_write>(
            'fuse_fs_write'))(
      fs,
      path,
      buf,
      size,
      off,
      fi,
    );
  }

  _dart_fuse_fs_write? _fuse_fs_write;

  int fuse_fs_write_buf(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_bufvec> buf,
    int off,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_write_buf ??=
        _dylib.lookupFunction<_c_fuse_fs_write_buf, _dart_fuse_fs_write_buf>(
            'fuse_fs_write_buf'))(
      fs,
      path,
      buf,
      off,
      fi,
    );
  }

  _dart_fuse_fs_write_buf? _fuse_fs_write_buf;

  int fuse_fs_fsync(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int datasync,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_fsync ??=
        _dylib.lookupFunction<_c_fuse_fs_fsync, _dart_fuse_fs_fsync>(
            'fuse_fs_fsync'))(
      fs,
      path,
      datasync,
      fi,
    );
  }

  _dart_fuse_fs_fsync? _fuse_fs_fsync;

  int fuse_fs_flush(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_flush ??=
        _dylib.lookupFunction<_c_fuse_fs_flush, _dart_fuse_fs_flush>(
            'fuse_fs_flush'))(
      fs,
      path,
      fi,
    );
  }

  _dart_fuse_fs_flush? _fuse_fs_flush;

  int fuse_fs_statfs(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<statvfs> buf,
  ) {
    return (_fuse_fs_statfs ??=
        _dylib.lookupFunction<_c_fuse_fs_statfs, _dart_fuse_fs_statfs>(
            'fuse_fs_statfs'))(
      fs,
      path,
      buf,
    );
  }

  _dart_fuse_fs_statfs? _fuse_fs_statfs;

  int fuse_fs_opendir(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_opendir ??=
        _dylib.lookupFunction<_c_fuse_fs_opendir, _dart_fuse_fs_opendir>(
            'fuse_fs_opendir'))(
      fs,
      path,
      fi,
    );
  }

  _dart_fuse_fs_opendir? _fuse_fs_opendir;

  int fuse_fs_readdir(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Void> buf,
    ffi.Pointer<ffi.NativeFunction<fuse_fill_dir_t>> filler,
    int off,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_readdir ??=
        _dylib.lookupFunction<_c_fuse_fs_readdir, _dart_fuse_fs_readdir>(
            'fuse_fs_readdir'))(
      fs,
      path,
      buf,
      filler,
      off,
      fi,
    );
  }

  _dart_fuse_fs_readdir? _fuse_fs_readdir;

  int fuse_fs_fsyncdir(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int datasync,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_fsyncdir ??=
        _dylib.lookupFunction<_c_fuse_fs_fsyncdir, _dart_fuse_fs_fsyncdir>(
            'fuse_fs_fsyncdir'))(
      fs,
      path,
      datasync,
      fi,
    );
  }

  _dart_fuse_fs_fsyncdir? _fuse_fs_fsyncdir;

  int fuse_fs_releasedir(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_releasedir ??=
        _dylib.lookupFunction<_c_fuse_fs_releasedir, _dart_fuse_fs_releasedir>(
            'fuse_fs_releasedir'))(
      fs,
      path,
      fi,
    );
  }

  _dart_fuse_fs_releasedir? _fuse_fs_releasedir;

  int fuse_fs_create(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int mode,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_create ??=
        _dylib.lookupFunction<_c_fuse_fs_create, _dart_fuse_fs_create>(
            'fuse_fs_create'))(
      fs,
      path,
      mode,
      fi,
    );
  }

  _dart_fuse_fs_create? _fuse_fs_create;

  int fuse_fs_lock(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_file_info> fi,
    int cmd,
    ffi.Pointer<flock> lock,
  ) {
    return (_fuse_fs_lock ??= _dylib
        .lookupFunction<_c_fuse_fs_lock, _dart_fuse_fs_lock>('fuse_fs_lock'))(
      fs,
      path,
      fi,
      cmd,
      lock,
    );
  }

  _dart_fuse_fs_lock? _fuse_fs_lock;

  int fuse_fs_flock(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<fuse_file_info> fi,
    int op,
  ) {
    return (_fuse_fs_flock ??=
        _dylib.lookupFunction<_c_fuse_fs_flock, _dart_fuse_fs_flock>(
            'fuse_fs_flock'))(
      fs,
      path,
      fi,
      op,
    );
  }

  _dart_fuse_fs_flock? _fuse_fs_flock;

  int fuse_fs_chmod(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int mode,
  ) {
    return (_fuse_fs_chmod ??=
        _dylib.lookupFunction<_c_fuse_fs_chmod, _dart_fuse_fs_chmod>(
            'fuse_fs_chmod'))(
      fs,
      path,
      mode,
    );
  }

  _dart_fuse_fs_chmod? _fuse_fs_chmod;

  int fuse_fs_chown(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int uid,
    int gid,
  ) {
    return (_fuse_fs_chown ??=
        _dylib.lookupFunction<_c_fuse_fs_chown, _dart_fuse_fs_chown>(
            'fuse_fs_chown'))(
      fs,
      path,
      uid,
      gid,
    );
  }

  _dart_fuse_fs_chown? _fuse_fs_chown;

  int fuse_fs_truncate(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int size,
  ) {
    return (_fuse_fs_truncate ??=
        _dylib.lookupFunction<_c_fuse_fs_truncate, _dart_fuse_fs_truncate>(
            'fuse_fs_truncate'))(
      fs,
      path,
      size,
    );
  }

  _dart_fuse_fs_truncate? _fuse_fs_truncate;

  int fuse_fs_ftruncate(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int size,
    ffi.Pointer<fuse_file_info> fi,
  ) {
    return (_fuse_fs_ftruncate ??=
        _dylib.lookupFunction<_c_fuse_fs_ftruncate, _dart_fuse_fs_ftruncate>(
            'fuse_fs_ftruncate'))(
      fs,
      path,
      size,
      fi,
    );
  }

  _dart_fuse_fs_ftruncate? _fuse_fs_ftruncate;

  int fuse_fs_utimens(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<timespec> tv,
  ) {
    return (_fuse_fs_utimens ??=
        _dylib.lookupFunction<_c_fuse_fs_utimens, _dart_fuse_fs_utimens>(
            'fuse_fs_utimens'))(
      fs,
      path,
      tv,
    );
  }

  _dart_fuse_fs_utimens? _fuse_fs_utimens;

  int fuse_fs_access(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int mask,
  ) {
    return (_fuse_fs_access ??=
        _dylib.lookupFunction<_c_fuse_fs_access, _dart_fuse_fs_access>(
            'fuse_fs_access'))(
      fs,
      path,
      mask,
    );
  }

  _dart_fuse_fs_access? _fuse_fs_access;

  int fuse_fs_readlink(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Int8> buf,
    int len,
  ) {
    return (_fuse_fs_readlink ??=
        _dylib.lookupFunction<_c_fuse_fs_readlink, _dart_fuse_fs_readlink>(
            'fuse_fs_readlink'))(
      fs,
      path,
      buf,
      len,
    );
  }

  _dart_fuse_fs_readlink? _fuse_fs_readlink;

  int fuse_fs_mknod(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int mode,
    int rdev,
  ) {
    return (_fuse_fs_mknod ??=
        _dylib.lookupFunction<_c_fuse_fs_mknod, _dart_fuse_fs_mknod>(
            'fuse_fs_mknod'))(
      fs,
      path,
      mode,
      rdev,
    );
  }

  _dart_fuse_fs_mknod? _fuse_fs_mknod;

  int fuse_fs_mkdir(
    ffi.Pointer<fuse_fs> fs,
    ffi.Pointer<ffi.Int8> path,
    int mode,
  ) {
    return (_fuse_fs_mkdir ??=
        _dylib.lookupFunction<_c_fuse_fs_mkdir, _dart_fuse_fs_mkdir>(
            'fuse_fs_mkdir'))(
      fs,
      path,
      mode,
    );
  }

  _dart_fuse_fs_mkdir? _fuse_fs_mkdir;
